# scm-frontend

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  start_streamlit.sh
scm_frontend/: main.py  start_streamlit.sh  streamlit_app.py
