[tool.poetry]
name = "frontend-package"
version = "0.2.5"
description = "Frontend package description"
authors = ["John Dutchover <1983909-johndutchover@users.noreply.gitlab.com>"]
readme = ["frontend.README.md"]

[tool.poetry.dependencies]
streamlit = { version = ">=1.30.0", python = ">=3.11" }
bokeh = { version = "==2.4.3", python = ">=3.11" }
pymongo = { version = ">=4.3.3", python = ">=3.11" }
pytz = ">=2023.3"
plotly = { version = ">=5.14.1", python = ">=3.11" }
pandas = { version = ">=2.0.2", python = ">=3.11" }
importlib-metadata = { version = ">=1.4,<7", python = ">=3.11" }
python-dotenv = { version = "^1.0.0", python = ">=3.11" }

[tool.poetry.group.dev.dependencies]
typer = { version = "^0.9.0", python = ">=3.11" }
flake8 = { version = "^6.0.0", python = ">=3.11" }
black = { version = "^23.3.0", python = ">=3.11" }
pylint = { version = "^2.17.4", python = ">=3.11" }
gitpython = { version = ">=3.1.35", python = ">=3.11" }
packaging = { version = ">=22.0", python = "3.11" }

[tool.poetry.group.test.dependencies]
pytest = { version = ">=7.4.4", python = ">=3.11" }

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
