[tool.poetry]
name = "scm_fe"
version = "0.1.0"
description = "ShortCircuitMe frontend"
authors = ["John Dutchover <1983909-johndutchover@users.noreply.gitlab.com>"]
readme = ["README.md"]
packages = [{include = "scm_frontend"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.30.0"
bokeh = "==2.4.3"
pandas = "==2.2.0"
pymongo = "==4.6.1"
pytz = ">=2023.3"
plotly = ">=5.14.1"
importlib-metadata = ">=1.4,<7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
typer = "^0.9.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pylint = "^2.17.4"
gitpython = ">=3.1.35"
packaging = ">=22.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.4"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
